--- a/streambuffer/pom.xml
+++ b/streambuffer/pom.xml
@@ -256,6 +256,7 @@
                 <configuration>
                     <templateFile>${project.basedir}/copyright.txt</templateFile>
                     <excludeFile>${project.basedir}/copyright-exclude</excludeFile>
+                    <scm>git</scm>
                     <!-- skip files not under SCM-->
                     <scmOnly>true</scmOnly>
                     <!-- turn off warnings -->
