--- a/streambuffer/pom.xml
+++ b/streambuffer/pom.xml
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>org.jvnet.staxex</groupId>
             <artifactId>stax-ex</artifactId>
-            <version>1.9.0-SNAPSHOT</version>
+            <version>1.8.1</version>
         </dependency>
         <dependency>
             <groupId>jakarta.activation</groupId>
