add pointer to javadoc
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/streambuffer/pom.xml
+++ b/streambuffer/pom.xml
@@ -225,6 +225,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <release>11</release>
+                    <notimestamp>true</notimestamp>
                 </configuration>
             </plugin>
             <plugin>
