--- a/streambuffer/pom.xml
+++ b/streambuffer/pom.xml
@@ -83,12 +83,12 @@
         <dependency>
             <groupId>org.jvnet.staxex</groupId>
             <artifactId>stax-ex</artifactId>
-            <version>1.8.3</version>
+            <version>2.0.0-M1</version>
         </dependency>
         <dependency>
             <groupId>jakarta.activation</groupId>
             <artifactId>jakarta.activation-api</artifactId>
-            <version>1.2.2</version>
+            <version>2.0.0-RC2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
