--- a/streambuffer/pom.xml
+++ b/streambuffer/pom.xml
@@ -224,6 +224,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
+                    <archive>
+                        <manifest>
+                            <addDefaultEntries>false</addDefaultEntries>
+                        </manifest>
+                    </archive>
                     <release>11</release>
                     <notimestamp>true</notimestamp>
                 </configuration>
