--- a/streambuffer/pom.xml
+++ b/streambuffer/pom.xml
@@ -76,8 +76,8 @@
         <spotbugs.threshold>Low</spotbugs.threshold>
         <spotbugs.version>4.3.0</spotbugs.version>
 
-        <stax-ex.version>2.0.1</stax-ex.version>
-        <activation.version>2.0.1</activation.version>
+        <stax-ex.version>2.0.2-SNAPSHOT</stax-ex.version>
+        <activation.version>2.0.2-SNAPSHOT</activation.version>
         <junit.version>4.13.2</junit.version>
         <woodstox-core.version>6.2.6</woodstox-core.version>
 
@@ -92,8 +92,8 @@
                 <version>${stax-ex.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.sun.activation</groupId>
-                <artifactId>jakarta.activation</artifactId>
+                <groupId>jakarta.activation</groupId>
+                <artifactId>jakarta.activation-api</artifactId>
                 <version>${activation.version}</version>
             </dependency>
             <dependency>
@@ -115,8 +115,8 @@
             <artifactId>stax-ex</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.sun.activation</groupId>
-            <artifactId>jakarta.activation</artifactId>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
